Rust keep build artifacts (#135)
* ignore all build output except .json, .wasm and .contract for protocol

* protocol build outputs

* optimise .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,10 @@ secrets.json
 .env*
 
 # Ingnore build target
-contracts/target/
+protocol/target/ink/*/release
+protocol/target/ink/*/wasm32-unknown-unknown
+protocol/target/ink/*/CACHEDIR.TAG
+protocol/target/**/.rustc_info.json
 
 /db/
 /data/
