--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -18,7 +18,8 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
-        "cypress": "^10.8.0",
+        "@cypress/xpath": "^2.0.3",
+        "cypress": "^12.14.0",
         "cypress-promise": "^1.1.0",
         "eslint-config-react-app": "^7.0.1"
     },
