--- a/demos/client-example/tsconfig.json
+++ b/demos/client-example/tsconfig.json
@@ -9,7 +9,8 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "composite": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["cypress", "cypress-xpath"]
   },
   "include": [
     "src"
