--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -108,10 +108,9 @@ jobs:
       - name: Run the cypress tests on client-example
         run: |
           cd captcha
-          npm run start:provider 1>/dev/null 2>&1 &
-          npm run start:server 1>/dev/null 2>&1 &
-          npm run start:demo 1>/dev/null 2>&1 &
-          npm run -w @prosopo/client-example cypress:run
+          npm run start:provider 1>provider.log 2>&1 &
+          npm run start:server 1>server.log 2>&1 &
+          npm run -w @prosopo/client-example test
 
       - name: Remove the docker containers
         run: |
