--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -19,6 +19,7 @@
     },
     "devDependencies": {
         "@cypress/xpath": "^2.0.3",
+        "@types/node": "^20.3.1",
         "cypress": "^12.14.0",
         "cypress-promise": "^1.1.0",
         "eslint-config-react-app": "^7.0.1"
@@ -26,7 +27,7 @@
     "scripts": {
         "start": "PORT=3001 react-scripts start",
         "build": "NODE_ENV=production react-scripts build",
-        "test": "react-scripts test",
+        "test": "ts-node src/test",
         "eject": "react-scripts eject",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
