--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -109,6 +109,7 @@ jobs:
         run: |
           cd captcha
           docker compose --file ./docker/docker-compose.test.yml down
+          docker compose --file ./docker/docker-compose.test.yml up -d
           npm run deploy_protocol
           npm run deploy_dapp
           npm run setup
