--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -27,23 +27,23 @@
     }
   },
   "dependencies": {
-    "@727-ventures/typechain-polkadot": "1.1.0",
-    "@727-ventures/typechain-types": "1.1.0",
-    "@polkadot/api": "10.8.1",
-    "@polkadot/api-contract": "10.8.1",
-    "@polkadot/keyring": "12.2.2",
-    "@polkadot/rpc-provider": "10.8.1",
-    "@polkadot/typegen": "10.8.1",
-    "@polkadot/types": "10.8.1",
-    "@polkadot/types-create": "10.8.1",
-    "@polkadot/util": "12.2.2",
-    "@polkadot/util-crypto": "12.2.2",
+    "@727-ventures/typechain-polkadot": "file:../../../typechain-polkadot/packages/typechain-polkadot",
+    "@727-ventures/typechain-types": "file:../../../typechain-polkadot/packages/typechain-types",
+    "@polkadot/api": "10.9.1",
+    "@polkadot/api-contract": "10.9.1",
+    "@polkadot/keyring": "12.3.2",
+    "@polkadot/rpc-provider": "10.9.1",
+    "@polkadot/typegen": "10.9.1",
+    "@polkadot/types": "10.9.1",
+    "@polkadot/types-create": "10.9.1",
+    "@polkadot/util": "12.3.2",
+    "@polkadot/util-crypto": "12.3.2",
     "@prosopo/common": "^0.1.11",
     "@prosopo/types": "^0.1.11",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@polkadot/api-augment": "10.8.1",
+    "@polkadot/api-augment": "10.9.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
