--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for client-example",
   "main": "build/app.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode=production",
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:fix": "npx eslint . --fix"
