--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -20,12 +20,16 @@
     "devDependencies": {
         "@cypress/xpath": "^2.0.3",
         "@types/node": "^20.3.1",
+        "css-loader": "^6.8.1",
         "cypress": "^12.14.0",
         "cypress-promise": "^1.1.0",
-        "eslint-config-react-app": "^7.0.1"
+        "eslint-config-react-app": "^7.0.1",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.3",
+        "interpolate-html-plugin": "^4.0.0"
     },
     "scripts": {
-        "start": "PORT=3001 react-scripts start",
+        "start": "webpack serve",
         "build": "NODE_ENV=production react-scripts build",
         "test": "ts-node src/test",
         "eject": "react-scripts eject",
