--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "@polkadot/util-crypto": "12.3.2",
     "@prosopo/common": "^0.1.11",
