--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "stash:clear": "npm run --silent gitmod -- git stash clear",
     "version": "npm --no-git-tag-version --allow-same-version --workspaces --workspaces-update version",
     "ls:ws": "npm run --workspaces env | grep npm_package_name | cut -d '=' -f 2",
+    "cli": "npm -w @prosopo/cli run cli",
     "setup": "npm -w @prosopo/dev run setup",
     "setup:all": "npm run deploy_protocol && npm run deploy_dapp && npm run setup",
     "start:provider": "npm -w @prosopo/cli run start",
