--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "cli": "node ./dist/cli/cli.js",
+    "cli": "node ./dist/cli.js",
     "start": "node ./dist/start.js",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix"
