Don't rely on parsing stdout from spawned process

--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -131,7 +131,10 @@ jobs:
           sleep 20s
           cat provider.log
           cat server.log
-          NODE_ENV=test npm run -w @prosopo/client-example test
+          NODE_ENV=test npm run -w @prosopo/client-example build
+          sleep 20s
+          NODE_ENV=test npm run -w @prosopo/client-example cypress:run
+          
 
       - name: Remove the docker containers
         run: |
