--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -133,6 +133,7 @@ jobs:
           cat server.log
           NODE_ENV=test npm run -w @prosopo/client-example build
           sleep 20s
+          NODE_ENV=test npm run -w @prosopo/client-example start &
           NODE_ENV=test npm run -w @prosopo/client-example cypress:run
           
 
