--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -132,8 +132,8 @@ jobs:
           cat provider.log
           cat server.log
           NODE_ENV=test npm run -w @prosopo/client-example build
-          sleep 20s
-          NODE_ENV=test npm run -w @prosopo/client-example start 1>client-example.log 2>&1 &
+          cd demos/client-example && NODE_ENV=test npm run start 1>../../client-example.log 2>&1 &
+          cd ../..
           sleep 20s
           cat client-example.log
           NODE_ENV=test npm run -w @prosopo/client-example cypress:run
