--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -134,7 +134,8 @@ jobs:
           NODE_ENV=test npm run -w @prosopo/client-example build
           cd demos/client-example && NODE_ENV=test npm run start 1>../../client-example.log 2>&1 &
           ls
-          sleep 20s
+          sleep 30s
+          cat client-example.log
           NODE_ENV=test npm run -w @prosopo/client-example cypress:run
           
 
