--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -26,7 +26,8 @@
         "eslint-config-react-app": "^7.0.1",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.3",
-        "interpolate-html-plugin": "^4.0.0"
+        "interpolate-html-plugin": "^4.0.0",
+        "mini-css-extract-plugin": "^2.7.6"
     },
     "scripts": {
         "start": "webpack serve --config webpack.config.base.js",
