--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -28,7 +28,8 @@
         "@prosopo/procaptcha": "^0.1.11",
         "i18next": "^22.5.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "zod": "^3.17.9"
     },
     "devDependencies": {
         "typescript": "^4.9.4"
