--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -36,12 +36,12 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/prosopo/procaptcha-react.git"
+        "url": "git+https://github.com/prosopo/captcha.git"
     },
     "bugs": {
-        "url": "https://github.com/prosopo/procaptcha-react/issues"
+        "url": "https://github.com/prosopo/captcha/issues"
     },
-    "homepage": "https://github.com/prosopo/procaptcha-react#readme",
+    "homepage": "https://github.com/prosopo/captcha#readme",
     "description": "",
     "publishConfig": {
         "registry": "https://registry.npmjs.org"
