171 mimic recaptcha in procaptcha bundle (#183)
* wip

* use wrapQuery

* Parse uint8array

* add dapp_update

* Single mongo compose file

* Make getContractInfoOf script accept args

* Remove hard coded site key

* Fix block number type

* dapp account not loaded

* simplify start trigger

* fix provider_Update cli command

* Fix env vars

* use port 9230

* Update readme

* remove unused code

* Breakdown env, making db optional

* Update test types

* fix import paths

* Use new env

* set class env var

* Add qm

* dont parse config in env

* consolidate configs

* fix build

* switch to relative imports

* fix import

* Update package locks

* Add extra variables into client example webpack bundler

* Update env vars in bundle webpack

* move procaptcha type to types

* fix importd

* Fix imports

* Update dapp contract env names to be dapp site key

* Shared config for client and server. zod enums instead of TS enums

* Fix procaptcha-bundle

* fix enums in demos

--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -28,19 +28,20 @@
         "@prosopo/procaptcha": "^0.1.11",
         "i18next": "^22.5.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "zod": "^3.17.9"
     },
     "devDependencies": {
         "typescript": "^4.9.4"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/prosopo/procaptcha-react.git"
+        "url": "git+https://github.com/prosopo/captcha.git"
     },
     "bugs": {
-        "url": "https://github.com/prosopo/procaptcha-react/issues"
+        "url": "https://github.com/prosopo/captcha/issues"
     },
-    "homepage": "https://github.com/prosopo/procaptcha-react#readme",
+    "homepage": "https://github.com/prosopo/captcha#readme",
     "description": "",
     "publishConfig": {
         "registry": "https://registry.npmjs.org"
