--- a/packages/types/.npmignore
+++ b/packages/types/.npmignore
@@ -3,8 +3,14 @@
 /tests/
 /artifacts/
 tsconfig.json
+tsconfig.*.json
 tsconfig.tsbuildinfo
 env.development
 env.test
 .env.*
 webpack.*
+*.ipynb
+captchas_*.json
+data.json
+stl10/*.json
+stl10
