--- a/packages/datasets/.npmignore
+++ b/packages/datasets/.npmignore
@@ -2,7 +2,16 @@
 /src/
 /tests/
 /artifacts/
-/stl10/
-captchas_0-9_correct.json
-captchas_2-4_correct.json
+tsconfig.json
+tsconfig.*.json
+tsconfig.tsbuildinfo
+env.production
+env.development
+env.test
+.env.*
+webpack.*
+*.ipynb
+captchas_*.json
 data.json
+stl10/*.json
+stl10
