--- a/demos/client-example-server/tsconfig.json
+++ b/demos/client-example-server/tsconfig.json
@@ -32,10 +32,19 @@
       "path": "../../packages/api"
     },
     {
+      "path": "../../packages/cli"
+    },
+    {
       "path": "../../packages/contract"
     },
     {
+      "path": "../../packages/procaptcha"
+    },
+    {
       "path": "../../packages/server"
+    },
+    {
+      "path": "../../packages/types"
     }
   ]
 }
