--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prosopo/client-example-server",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "description": "Backend for client-example",
   "main": "dist/app.js",
   "scripts": {
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/prosopo/client-example-server#readme",
   "dependencies": {
-    "@prosopo/api": "^0.1.15",
-    "@prosopo/contract": "^0.1.15",
-    "@prosopo/procaptcha": "^0.1.15",
-    "@prosopo/server": "^0.1.15",
-    "@prosopo/types": "^0.1.15",
+    "@prosopo/api": "^0.1.16",
+    "@prosopo/cli": "^0.1.16",
+    "@prosopo/contract": "^0.1.16",
+    "@prosopo/procaptcha": "^0.1.16",
+    "@prosopo/server": "^0.1.16",
+    "@prosopo/types": "^0.1.16",
     "@typegoose/auto-increment": "3.3.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
