move env file location and build necessary packages only

--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -5,7 +5,7 @@ services:
       context: ..
       dockerfile: ./docker/images/provider.dockerfile
     env_file:
-      - .env.provider
+      - ../.env.provider
     ports:
       - "9229:9229"
       - "80:80"
