Change caddyfile location

--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -18,7 +18,7 @@ services:
       - "443:443"
       - "443:443/udp"
     volumes:
-      - ./provider.Caddyfile:/etc/caddy/Caddyfile
+      - ./docker/provider.Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
 volumes:
