--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -10,6 +10,29 @@ services:
     ports:
       - "9229:9229"
     tty: true
+    depends_on:
+      - database
+    networks:
+      - internal
+      - external
+  database:
+    image: mongo:5.0.4
+    # volumes:
+    #   - ./db:/data/db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=$MONGO_INITDB_ROOT_USERNAME
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_INITDB_ROOT_PASSWORD
+      - MONGO_INITDB_DATABASE=prosopo
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+    networks:
+      - internal
   caddy:
     image: caddy:2
     restart: unless-stopped
@@ -21,6 +44,8 @@ services:
       - ./docker/provider.Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
+    networks:
+      - external
 volumes:
     caddy_data:
     caddy_config:
