Specify networks top level

--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -46,6 +46,11 @@ services:
       - caddy_config:/config
     networks:
       - external
+networks:
+    internal:
+        name: internal
+    external:
+        name: external
 volumes:
     caddy_data:
     caddy_config:
