dockerignore and env file instead of env variables in compose

--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -21,10 +21,8 @@ services:
     #   - ./db:/data/db
     ports:
       - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGO_INITDB_ROOT_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_INITDB_ROOT_PASSWORD
-      - MONGO_INITDB_DATABASE=prosopo
+    env_file:
+      - ../.env.provider
     deploy:
       replicas: 1
       resources:
