--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -33,7 +33,7 @@
     "@prosopo/common": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/types": "^0.1.16",
-    "axios": "^0.27.2",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
