--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,13 +15,13 @@
     "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
     "@polkadot/util-crypto": "12.3.2",
     "@prosopo/common": "^0.1.16",
     "@prosopo/env": "^0.1.16",
     "@prosopo/provider": "^0.1.16",
-    "@prosopo/types": "^0.1.16"
+    "@prosopo/types": "^0.1.16",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "typescript": "^4.9.4"
