Put the provider CLI in a bundle

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "node-loader": "^2.0.0",
     "nodemon": "^2.0.20",
     "npm-check-updates": "^15.3.4",
     "prettier": "2.8.8",
