--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -9,6 +9,7 @@
     "build": "tsc --build --verbose",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
+    "cli": "node ./dist/js/cli.js",
     "test": "NODE_ENV=test ts-mocha \"./tests/js/**/*.test.ts\" --timeout 120000 --recursive --exit"
   },
   "main": "./dist/js/index.js",
@@ -29,11 +30,16 @@
     }
   },
   "dependencies": {
-    "@polkadot/util": "12.3.2",
+    "@polkadot/util": "^12.3.2",
     "@prosopo/common": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/types": "^0.1.16",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "bcrypt": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "noble-hashes": "^0.3.1",
+    "seedrandom": "^3.0.5",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
