--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -39,6 +39,7 @@
     "fs": "^0.0.1-security",
     "noble-hashes": "^0.3.1",
     "seedrandom": "^3.0.5",
+    "sharp": "^0.32.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
