--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -40,7 +40,9 @@
     "noble-hashes": "^0.3.1",
     "seedrandom": "^3.0.5",
     "sharp": "^0.32.1",
-    "yargs": "^17.7.2"
+    "ts-to-zod": "^3.1.3",
+    "yargs": "^17.7.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
