--- a/provider-gui/package.json
+++ b/provider-gui/package.json
@@ -15,6 +15,7 @@
     "@polkadot/extension-dapp": "^0.46.5",
     "@polkadot/extension-inject": "^0.46.5",
     "@polkadot/types": "^10.9.1",
+    "@prosopo/api": "^0.1.16",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
