--- a/provider-gui/package.json
+++ b/provider-gui/package.json
@@ -14,8 +14,12 @@
     "@mui/material": "^5.13.7",
     "@polkadot/extension-dapp": "^0.46.5",
     "@polkadot/extension-inject": "^0.46.5",
+    "@polkadot/keyring": "^12.3.2",
     "@polkadot/types": "^10.9.1",
     "@prosopo/api": "^0.1.16",
+    "@prosopo/cli": "^0.1.16",
+    "@prosopo/env": "^0.1.16",
+    "@prosopo/provider": "^0.1.16",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
