--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -36,6 +36,7 @@
     "@prosopo/types": "^0.1.16",
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
+    "consola": "^3.2.3",
     "fs": "^0.0.1-security",
     "noble-hashes": "^0.3.1",
     "seedrandom": "^3.0.5",
