--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.0",
     "consola": "^3.2.3",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "noble-hashes": "^0.3.1",
     "seedrandom": "^3.0.5",
     "sharp": "^0.32.1",
