--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -40,6 +40,7 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "noble-hashes": "^0.3.1",
+    "node-fetch": "^2.6.12",
     "seedrandom": "^3.0.5",
     "sharp": "^0.32.1",
     "ts-to-zod": "^3.1.3",
