--- a/packages/datasets-fs/package.json
+++ b/packages/datasets-fs/package.json
@@ -18,6 +18,7 @@
         "@polkadot/util": "^12.3.2",
         "@prosopo/common": "^0.1.16",
         "@prosopo/types": "^0.1.16",
+        "@prosopo/util": "^0.1.16",
         "bcrypt": "^5.1.0",
         "consola": "^3.2.3",
         "fs": "^0.0.1-security",
