--- a/packages/datasets-fs/tsconfig.json
+++ b/packages/datasets-fs/tsconfig.json
@@ -9,6 +9,9 @@
     "references": [
         {
             "path": "../util"
+        },
+        {
+            "path": "../types"
         }
     ]
 }
