--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/prosopo/client-example-server#readme",
   "dependencies": {
+    "@noble/hashes": "^1.3.1",
+    "@polkadot/util": "12.3.2",
+    "@polkadot/util-crypto": "12.3.2",
     "@prosopo/api": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/procaptcha": "^0.1.16",
@@ -29,7 +32,6 @@
     "@prosopo/types": "^0.1.16",
     "@typegoose/auto-increment": "3.3.0",
     "axios": "^0.27.2",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
