--- a/protocol/contracts/captcha/Cargo.toml
+++ b/protocol/contracts/captcha/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "captcha"
-version = "4.0.0"
+version = "4.2.0"
 authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", "Vincenzo Ferrara", "Siniša Čanak"]
 edition = "2021"
 
 [dependencies]
-ink = { git = "https://github.com/prosopo/ink", rev="9ca19c462d5f5d1572ddce595d2698207241fd4a", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+ink = { git = "https://github.com/prosopo/ink_sr25519", branch="goastler-add-sr25519_verify", default-features = false }
+scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
+scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
 hex = "0.4.3"
 
 [dependencies.inject_self_macro]
@@ -26,13 +26,13 @@ path = "../../crates/disable_macro"
 version = "0.3.0"
 path = "../../contracts/common"
 default-features = false
-features = ["ink-as-dependency"] 
+features = ["ink-as-dependency"]
 
 [dev-dependencies.common_dev]
 version = "0.3.0"
 path = "../../contracts/common_dev"
 default-features = false
-features = ["ink-as-dependency"] 
+features = ["ink-as-dependency"]
 
 [lib]
 name = "captcha"
