--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -16,7 +16,7 @@
     ],
     "references": [
         {
-            "path": "../api"
+            "path": "../captcha"
         },
         {
             "path": "../contract"
