--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -25,7 +25,7 @@
     "@noble/hashes": "^1.3.1",
     "@polkadot/util": "12.3.2",
     "@polkadot/util-crypto": "12.3.2",
-    "@prosopo/api": "^0.1.16",
+    "@prosopo/captcha": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/procaptcha": "^0.1.16",
     "@prosopo/server": "^0.1.16",
