--- a/demos/client-example-server/tsconfig.json
+++ b/demos/client-example-server/tsconfig.json
@@ -29,7 +29,7 @@
   "exclude": ["node_modules", "dist"],
   "references": [
     {
-      "path": "../../packages/api"
+      "path": "../../packages/captcha"
     },
     {
       "path": "../../packages/cli"
