--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -24,7 +24,7 @@
     "@polkadot/types": "10.9.1",
     "@polkadot/util": "12.3.2",
     "@polkadot/util-crypto": "12.3.2",
-    "@prosopo/api": "^0.1.16",
+    "@prosopo/captcha": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/types": "^0.1.16",
     "@prosopo/common": "^0.1.16",
