--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,7 +26,7 @@
     "@polkadot/keyring": "12.3.2",
     "@polkadot/rpc-provider": "10.9.1",
     "@polkadot/types": "10.9.1",
-    "@prosopo/api": "^0.1.16",
+    "@prosopo/captcha": "^0.1.16",
     "@prosopo/contract": "^0.1.16",
     "@prosopo/procaptcha": "^0.1.16",
     "@prosopo/types": "^0.1.16"
