--- a/provider-gui/package.json
+++ b/provider-gui/package.json
@@ -16,7 +16,7 @@
         "@polkadot/extension-inject": "^0.46.5",
         "@polkadot/keyring": "^12.3.2",
         "@polkadot/types": "^10.9.1",
-        "@prosopo/api": "^0.1.16",
+        "@prosopo/captcha": "^0.1.16",
         "@prosopo/cli": "^0.1.16",
         "@prosopo/env": "^0.1.16",
         "@prosopo/provider": "^0.1.16",
