--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -36,6 +36,7 @@
     "cron": "^2.1.0",
     "cron-parser": "^4.5.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.1",
     "nodejs-polars": "^0.6.0",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
@@ -46,12 +47,14 @@
     "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.0.6",
+    "@types/sinon": "^10.0.15",
     "@types/yargs": "^17.0.10",
     "c8": "^7.11.3",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "fs-extra": "^10.1.0",
     "mocha": "^10.2.0",
+    "sinon": "^15.2.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
