--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -33,9 +33,8 @@ jobs:
       - name: Get provider image version
         id: get_provider_image_version
         run: |
-          echo "{provider_image_version}=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
-
-
+          echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+          echo "${{ env.PROVIDER_IMAGE_VERSION }}"
 
       # npm install
       - name: Npm install
@@ -61,11 +60,11 @@ jobs:
       - name: Build provider image
         run: |
           cd captcha
-          TAG=v{{ steps.get_provider_image_version.outputs.provider_image_version }} docker compose --file ./docker/docker-compose.provider.yml build --progress=plain
+          TAG=${{ env.PROVIDER_IMAGE_VERSION }} docker compose --file ./docker/docker-compose.provider.yml build --progress=plain
 
       # push the provider image to docker hub, if the push is to main
       - name: Push provider image to docker hub
         run: |
           if [ "${{ github.ref }}" != "refs/heads/main" ]; then exit 0; fi
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push prosopo/provider:{{ steps.get_provider_image_version.outputs.provider_image_version }}
+          docker push prosopo/provider:${{ env.PROVIDER_IMAGE_VERSION }}
