--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   provider:
-    image: prosopo/provider:${TAG}
+    image: prosopo/provider:${PROVIDER_IMAGE_VERSION}
     build:
       context: ..
       dockerfile: ./docker/images/provider.dockerfile
