--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Get provider image version
         id: get_provider_image_version
         run: |
+          cd captcha
           echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
           echo "${{ env.PROVIDER_IMAGE_VERSION }}"
 
