--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -36,6 +36,30 @@ jobs:
           cd captcha
           echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
 
+      # Get the latest version number of the npm package @prosopo/provider from the npm registry
+      - name: Get latest provider version
+        id: get_latest_provider_version
+        run: |
+          echo "LATEST_PROVIDER_VERSION=$(npm view @prosopo/provider version)" >> $GITHUB_ENV
+
+      # Check if the provider image version is greater than the latest version on the npm package @prosopo/provider
+      # For example, if the provider image version is 0.1.7 and the latest npm version is 0.1.6, then the provider image
+      # version is greater. If the provider image version is 0.1.6 and the latest npm version is 0.1.6, then the provider
+      # image version is not greater, and the workflow will not continue unless the provider image version is updated in
+      # the root package.json. Technically, this check doesn't cover the case where the provider image version is lower
+      # than the latest npm version, but that should never happen.
+      - name: Check provider image version
+        id: check_provider_image_version
+        run: |
+          echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+          echo "LATEST_PROVIDER_VERSION=$(npm view @prosopo/provider version)" >> $GITHUB_ENV
+          echo "PROVIDER_IMAGE_VERSION=$PROVIDER_IMAGE_VERSION"
+          echo "LATEST_PROVIDER_VERSION=$LATEST_PROVIDER_VERSION"
+          if [ "$PROVIDER_IMAGE_VERSION" == "$LATEST_PROVIDER_VERSION" ]; then
+              echo "Provider image version is not greater than the latest npm version. Please update the provider image version in the root package.json"
+              exit 1
+          fi
+
       # npm install
       - name: Npm install
         run: |
