--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -29,6 +29,15 @@ jobs:
           path: captcha
           submodules: recursive
 
+      # Get the provider image version from the root package.json and the latest package version from npm
+      - name: Get provider image version
+        run: |
+          cd captcha
+          echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+          echo "PROVIDER_IMAGE_VERSION=$PROVIDER_IMAGE_VERSION"
+          echo "LATEST_PROVIDER_VERSION=$(npm view @prosopo/provider version)" >> $GITHUB_ENV
+          echo "LATEST_PROVIDER_VERSION=$LATEST_PROVIDER_VERSION"
+
       # Check if the provider image version is greater than the latest version on the npm package @prosopo/provider
       # For example, if the provider image version is 0.1.7 and the latest npm version is 0.1.6, then the provider image
       # version is greater. If the provider image version is 0.1.6 and the latest npm version is 0.1.6, then the provider
@@ -38,11 +47,6 @@ jobs:
       - name: Check provider image version
         id: check_provider_image_version
         run: |
-          cd captcha
-          echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
-          echo "LATEST_PROVIDER_VERSION=$(npm view @prosopo/provider version)" >> $GITHUB_ENV
-          echo "PROVIDER_IMAGE_VERSION=$PROVIDER_IMAGE_VERSION"
-          echo "LATEST_PROVIDER_VERSION=$LATEST_PROVIDER_VERSION"
           if [ "$PROVIDER_IMAGE_VERSION" == "$LATEST_PROVIDER_VERSION" ]; then
               echo "Provider image version is not greater than the latest npm version. Please update the provider image version in the root package.json"
               exit 1
