--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Check provider image version
         id: check_provider_image_version
         run: |
-          if [ "$PROVIDER_IMAGE_VERSION" == "$LATEST_PROVIDER_VERSION" ]; then
+          if [ "${{ env.PROVIDER_IMAGE_VERSION }}" == "${{ env.LATEST_PROVIDER_VERSION }}" ]; then
               echo "Provider image version is not greater than the latest npm version. Please update the provider image version in the root package.json"
               exit 1
           fi
