--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -40,6 +40,7 @@ jobs:
           path: captcha
           submodules: recursive
 
+
       - run: mkdir -p ~/image-cache
 
       - id: image-cache
@@ -85,6 +86,18 @@ jobs:
           cd captcha
           ls .
           npm install
+
+      # Checks if the git hash of packages is the same after running linting
+      - name: Linter
+        run: |
+          PACKAGES_HASH=$(git ls-files -s somedirectory | git hash-object --stdin)
+          cd captcha
+          npm run lint:fix
+          NEW_PACKAGES_HASH=$(git ls-files -s somedirectory | git hash-object --stdin)
+          if [ "$PACKAGES_HASH" != "$NEW_PACKAGES_HASH" ]; then
+            echo "Linter failed"
+            exit 1
+          fi
 
       - name: Build provider and dependencies
         # Next few lines should contain the number of packages that provider depends on (check tsconfig.json)
