update util package description

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -32,7 +32,7 @@
     "publishConfig": {
         "registry": "https://registry.npmjs.org"
     },
-    "description": "Datasets for use with providers",
+    "description": "Utility package to house all code that is not specific to prosopo. E.g. random number generation, string manipulation, etc.",
     "directories": {
         "test": "tests"
     },
