added prosopo util package as dependency to common

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,21 +1,17 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "module": "commonjs",
-    "target": "esnext",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
-    "resolveJsonModule": true
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.json"
-  ],
-  "references": [
-
-  ]
+    "extends": "../../tsconfig.build.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "./dist",
+        "module": "commonjs",
+        "target": "esnext",
+        "lib": ["esnext", "dom"],
+        "resolveJsonModule": true
+    },
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
+    "references": [
+        {
+            "path": "../util"
+        }
+    ]
 }
