--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -17,6 +17,7 @@
         "@polkadot/keyring": "12.3.2",
         "@polkadot/util": "12.3.2",
         "@polkadot/util-crypto": "12.3.2",
+        "@prosopo/util": "^0.1.17",
         "@types/react": "^18.0.25",
         "dotenv": "^16.0.1",
         "i18next": "^21.9.2",
